--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "nodemon index.js",
         "server": "nodemon index.js",
         "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
     },
     "keywords": [],
     "author": "",
